--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ koin-annotations = "2.3.1"
 #Room Database
 room = "2.8.4"
 sqlite = "2.6.2"
+coroutine = "1.10.1"
 
 
 [libraries]
@@ -21,6 +22,8 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 #Testing
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
+#Coroutines
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutine" }
 #Kotlinx Serialization
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerialization" }
 #Koin DI
